examples/test/testpolicy14994.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14994
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key35: value4
      key44: value22
      key9: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value2
          key15: value22
          key0: value18
      podSelector:
        matchLabels:
          key26: value45
          key24: value11
